--- a/style-dictionary/tokens/base/size.json5
+++ b/style-dictionary/tokens/base/size.json5
@@ -22,6 +22,11 @@
         },
 
         "padding": {
+            "0": {
+                "default": {
+                    "value": "0"
+                } 
+            },
             "4": {
                 "default": {
                     "value": "4"
