--- a/style-dictionary/tokens/base/color-dark.json5
+++ b/style-dictionary/tokens/base/color-dark.json5
@@ -76,47 +76,47 @@
                     "value":"rgba(58, 58, 65, 1)"
                 }
             },
-            "status-default": {
+            "statusDefault": {
                 "normal":{
                     "value":"rgba(46, 46, 51, 1)"
                 }
             },
-            "status-info": {
+            "statusInfo": {
                 "normal":{
                     "value":"rgba(0, 27, 115, 1)"
                 }
             },
-            "status-danger": {
+            "statusDanger": {
                 "normal":{
                     "value": "rgba(87, 10, 17, 1)"
                 }
             },
-            "status-warning": {
+            "statusWarning": {
                 "normal":{
                     "value": "rgba(82, 50, 3, 1)"
                 }
             },
-            "status-help": {
+            "statusHelp": {
                 "normal":{
                     "value": "rgba(35, 18, 122, 1)"
                 }
             },
-            "status-sucsess": {
+            "statusSucsess": {
                 "normal":{
                     "value": "rgba(48, 79, 2, 1)"
                 }
             },
-            "bonus-default": {
+            "bonusDefault": {
                 "normal":{
                     "value": "rgba(250, 98, 87, 1)"
                 }
             },
-            "bonus-gold": {
+            "bonusGold": {
                 "normal":{
                     "value": "rgba(215, 103, 0, 1)"
                 }
             },
-            "bonus-platinum": {
+            "bonusPlatinum": {
                 "normal":{
                     "value": "rgba(26, 67, 152, 1)"
                 }
@@ -141,6 +141,9 @@
                     "value": "rgba(232, 233, 237, 1)"
                 },
                 "hover": {
+                    "value": "rgba(208, 209, 215, 1)"
+                },
+                "active": {
                     "value": "rgba(208, 209, 215, 1)"
                 },
                 "disable": {
@@ -187,9 +190,12 @@
                     "value": "rgba(245, 51, 51, 1)"
                 }
             },
-            "static-white": {
-                "default": {
+            "staticWhite": {
+                "normal": {
                     "value": "rgba(255, 255, 255, 1)"
+                },
+                "hover": {
+                    "value": "rgba(255, 255, 255, 0.75)"
                 }
             }
         },
