--- a/tokens/components/button/buttonIcon.json5
+++ b/tokens/components/button/buttonIcon.json5
@@ -1,5 +1,5 @@
 {
-    "buttonComposite": {
+    "buttonIcon": {
         "primary": {
             "small": {
                 "color": {
@@ -49,10 +49,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -106,10 +105,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -163,10 +161,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.12.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -222,10 +219,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -279,10 +275,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -336,10 +331,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.12.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -395,10 +389,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -452,10 +445,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -509,10 +501,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.12.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -568,10 +559,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -625,10 +615,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -682,10 +671,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.12.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -741,10 +729,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -798,10 +785,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.8.default.value}",
-                                "right": "{size.padding.12.default.value}",
+                                "right": "{size.padding.8.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
-                                "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -855,10 +841,9 @@
                         "default": {
                             "value": {
                                 "top": "{size.padding.12.default.value}",
-                                "right": "{size.padding.16.default.value}",
+                                "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
-                                "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -916,8 +901,7 @@
                                 "top": "{size.padding.0.default.value}",
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
-                                "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.0.default.value}"
                             }
                         }
                     }
@@ -973,8 +957,7 @@
                                 "top": "{size.padding.0.default.value}",
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
-                                "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "left": "{size.padding.0.default.value}"
                             }
                         }
                     }
@@ -1030,8 +1013,7 @@
                                 "top": "{size.padding.0.default.value}",
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
-                                "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "left": "{size.padding.0.default.value}"
                             }
                         }
                     }
@@ -1039,5 +1021,4 @@
             }
         }
     }
-    
 }
