Site 3569/add typography tokens (#534)
* Install style-dictionary

* Create style-dictionary config

* Refactoring style-dictionary config

* Update design-tokens

* Applying token styles to Button

* Temporary typescript fix for demo

* Add dark theme

* Add demo story

* Add button tokens to theme

* Update design tokens

* Implement button tokens

* Update tokens

* Update button tokens

* Refactoring button styles

* Refactoring button styles

* Update tokens

* Fix @ts-ignore

* Update tokens

* Update tokens

* Refactoring config style dictionary

* Switching to colors from tokens

* Fix styled Tabs type

* Fix types

* Add align-items to StyledButton

* Add justify-content to StyledButton

* Update tokens

* Add new Button variant - link

* Fix icon-inherit-color in Button

* Add typography tokens

* add typography component

* wip

* wip

* refresh tokens

* wip

* fix

* refresh tokens and move Link component

* styles move to styled.ts

* tried to get as props

* remove old typography component imports

* remove old typography components

* fix

* fix for styled-components

* wip

* wip

* fix

* fix

* add as prop

* fix type names

* remove tokens folder

* run yarn tokens

Co-authored-by: MichaelShipitsyn <38543952+MichaelShipitsyn@users.noreply.github.com>

--- a/style-dictionary/tokens/base/typography.json5
+++ b/style-dictionary/tokens/base/typography.json5
@@ -37,7 +37,8 @@
                         "value": {
                             "fontFamily": "{font.family.bold.default.value}",
                             "size": "22",
-                            "lineHeight": "32"
+                            "lineHeight": "32",
+                            "fontWeight": "600"
                         }
                     }
                 },
