--- a/style-dictionary/tokens/base/typography.json5
+++ b/style-dictionary/tokens/base/typography.json5
@@ -79,7 +79,7 @@
                     "normal": {
                         "value": {
                             "fontFamily": "{font.family.regular.default.value}",
-                            "size": "16",
+                            "size": "18",
                             "lineHeight": "28",
                             "fontWeight": "400"
                         }
@@ -87,7 +87,7 @@
                     "bold": {
                         "value": {
                             "fontFamily": "{font.family.medium.default.value}",
-                            "size": "16",
+                            "size": "18",
                             "lineHeight": "28",
                             "fontWeight": "500"
                         }
@@ -320,7 +320,7 @@
             }
         },
         
-        "component":{
+        "componentsMobile":{
             "button": {
                 "large": {
                     "default": {
@@ -353,6 +353,28 @@
                     }
                 }
             },
+            "inputHint":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "large":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
             "placeholder":{
                 "medium":{
                     "default":{
@@ -375,7 +397,7 @@
                     }
                 }
             },
-            "formItemText":{
+            "inputText":{
                 "medium":{
                     "default":{
                         "value": {
@@ -397,29 +419,7 @@
                     }
                 }
             },
-            "formItemLabel":{
-                "medium":{
-                    "default":{
-                        "value": {
-                            "fontFamily": "{font.family.medium.default.value}",
-                            "size": "16",
-                            "lineHeight": "24",
-                            "fontWeight": "500"
-                        }
-                    }
-                },
-                "large":{
-                    "default":{
-                        "value": {
-                            "fontFamily": "{font.family.medium.default.value}",
-                            "size": "16",
-                            "lineHeight": "24",
-                            "fontWeight": "500"
-                        }
-                    }
-                }
-            },
-            "form-item-hint":{
+            "inputLabel":{
                 "medium":{
                     "default":{
                         "value": {
@@ -448,6 +448,164 @@
                             "fontFamily": "{font.family.medium.default.value}",
                             "size": "12",
                             "lineHeight": "18",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "airplaneSeatName":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            }
+        },
+        "componentsDesktop":{
+            "button": {
+                "large": {
+                    "default": {
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "18",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "medium": {
+                    "default": {
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "small": {
+                    "default": {
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "14",
+                            "lineHeight": "16",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "inputLabel":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "large":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "placeholder":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "large":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "18",
+                            "lineHeight": "28",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "inputText":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "large":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "18",
+                            "lineHeight": "28",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "inputHint":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                },
+                "large":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "tagLabel":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "12",
+                            "lineHeight": "18",
+                            "fontWeight": "500"
+                        }
+                    }
+                }
+            },
+            "airplaneSeatName":{
+                "medium":{
+                    "default":{
+                        "value": {
+                            "fontFamily": "{font.family.medium.default.value}",
+                            "size": "16",
+                            "lineHeight": "24",
                             "fontWeight": "500"
                         }
                     }
