--- a/style-dictionary/tokens/components/button/buttonIcon.json5
+++ b/style-dictionary/tokens/components/button/buttonIcon.json5
@@ -33,9 +33,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -89,9 +94,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -145,9 +155,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.large.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.large.default.value}"
                         }
                     }
                 },
@@ -203,9 +218,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -259,9 +279,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -315,9 +340,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.large.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.large.default.value}"
                         }
                     }
                 },
@@ -373,9 +403,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -429,9 +464,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -485,9 +525,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.large.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.large.default.value}"
                         }
                     }
                 },
@@ -543,9 +588,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -599,9 +649,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -655,9 +710,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -713,9 +773,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -769,9 +834,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -825,9 +895,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.large.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.large.default.value}"
                         }
                     }
                 },
@@ -883,9 +958,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.small.default.value}"
+                            "value": "{typography.componentsMobile.button.small.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.small.default.value}"
                         }
                     }
                 },
@@ -939,9 +1019,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.medium.default.value}"
+                            "value": "{typography.componentsMobile.button.medium.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.medium.default.value}"
                         }
                     }
                 },
@@ -995,9 +1080,14 @@
                     }
                 },
                 "typography": {
-                    "default": {
+                    "mobile": {
                         "default": {
-                            "value": "{typography.component.button.large.default.value}"
+                            "value": "{typography.componentsMobile.button.large.default.value}"
+                        }
+                    },
+                    "desktop": {
+                        "default": {
+                            "value": "{typography.componentsDesktop.button.large.default.value}"
                         }
                     }
                 },
