--- a/style-dictionary/tokens/components/airplaneSeat.json5
+++ b/style-dictionary/tokens/components/airplaneSeat.json5
@@ -8,7 +8,7 @@
                             "value": "rgba(255, 255, 255, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -19,7 +19,7 @@
                             "value": "rgba(208, 209, 215, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -60,7 +60,7 @@
                             "value": "rgba(133, 182, 255, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -71,7 +71,7 @@
                             "value": "rgba(82, 151, 255, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -109,10 +109,10 @@
                 "color":{
                     "bg":{
                         "normal":{
-                            "value": "rgba(46, 130, 255, 1)"
+                            "value": "rgba(0, 78, 194, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -120,10 +120,10 @@
                     },
                     "border":{
                         "normal":{
-                            "value": "rgba(0, 65, 163, 1)"
+                            "value": "rgba(0, 45, 112, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -164,7 +164,7 @@
                             "value": "rgba(175, 241, 30, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -175,7 +175,7 @@
                             "value": "rgba(133, 188, 12, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -213,10 +213,10 @@
                 "color":{
                     "bg":{
                         "normal":{
-                            "value": "rgba(255, 190, 112, 1)"
+                            "value": "rgba(255, 144, 10, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -224,10 +224,10 @@
                     },
                     "border":{
                         "normal":{
-                            "value": "rgba(255, 139, 0, 1)"
+                            "value": "rgba(185, 89, 0, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -268,7 +268,7 @@
                             "value": "rgba(255, 208, 99, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -279,7 +279,7 @@
                             "value": "rgba(250, 175, 0, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -320,7 +320,7 @@
                             "value": "rgba(248, 133, 104, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -331,7 +331,7 @@
                             "value": "rgba(222, 53, 11, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -372,7 +372,7 @@
                             "value": "rgba(154, 127, 230, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
@@ -383,7 +383,7 @@
                             "value": "rgba(108, 69, 219, 1)"
                         },
                         "active":{
-                            "value": "rgba(33, 33, 38, 1)"
+                            "value": "{color.bg.contrast.normal.value}"
                         },
                         "disable":{
                             "value": "{color.bg.secondary.disable.value}"
