--- a/style-dictionary/tokens/components/button/buttonComposite.json5
+++ b/style-dictionary/tokens/components/button/buttonComposite.json5
@@ -57,7 +57,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -119,7 +119,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -181,7 +181,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -245,7 +245,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -307,7 +307,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -369,7 +369,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -433,7 +433,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -495,7 +495,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -557,7 +557,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -621,7 +621,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -683,7 +683,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -745,7 +745,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -809,7 +809,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -871,7 +871,7 @@
                                 "right": "{size.padding.12.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.12.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -933,7 +933,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.12.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
@@ -997,7 +997,7 @@
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
                                 "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -1059,7 +1059,7 @@
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
                                 "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.8.default.value}"
+                                "innerHorizontal": "{size.padding.8.default.value}"
                             }
                         }
                     }
@@ -1121,7 +1121,7 @@
                                 "right": "{size.padding.0.default.value}",
                                 "bottom": "{size.padding.0.default.value}",
                                 "left": "{size.padding.0.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
