--- a/style-dictionary/tokens/components/input.json5
+++ b/style-dictionary/tokens/components/input.json5
@@ -17,7 +17,7 @@
                             "value": "{color.bg.primary.disable.value}"
                         }
                     },
-                    "inputLable":{
+                    "inputLabel":{
                         "normal":{
                             "value": "{color.text.secondary.default.value}"
                         },
@@ -102,7 +102,7 @@
                 },
                 "typography": {
                     "mobile": {
-                        "inputLable": {
+                        "inputLabel": {
                             "value": "{typography.componentsMobile.inputLabel.medium.default.value}"
                         },
                         "placeholder": {
@@ -116,7 +116,7 @@
                         }
                     },
                     "desktop": {
-                        "inputLable": {
+                        "inputLabel": {
                             "value": "{typography.componentsDesktop.inputLabel.medium.default.value}"
                         },
                         "placeholder": {
@@ -143,7 +143,7 @@
                                 "right": "{size.padding.16.default.value}",
                                 "bottom": "{size.padding.8.default.value}",
                                 "left": "{size.padding.16.default.value}",
-                                "innerHorisontal": "{size.padding.12.default.value}"
+                                "innerHorizontal": "{size.padding.12.default.value}"
                             }
                         }
                     }
