SITE-3566/Added Tag component

--- a/style-dictionary/tokens/base/color.json5
+++ b/style-dictionary/tokens/base/color.json5
@@ -106,7 +106,7 @@
                     "value": "rgba(242, 235, 255, 1)"
                 }
             },
-            "statusSucsess": {
+            "statusSuccess": {
                 "normal":{
                     "value": "rgba(244, 250, 219, 1)"
                 }
