--- a/style-dictionary/tokens/base/colorDark.json5
+++ b/style-dictionary/tokens/base/colorDark.json5
@@ -106,7 +106,7 @@
                     "value": "rgba(35, 18, 122, 1)"
                 }
             },
-            "statusSucsess": {
+            "statusSuccess": {
                 "normal":{
                     "value": "rgba(48, 79, 2, 1)"
                 }
